[gd_scene load_steps=6 format=3 uid="uid://stbi58t5etjk"]

[ext_resource type="Script" uid="uid://bq7amhxauiouf" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://di5r2xofgp2uk" path="res://assets/backgroundtest.png" id="2_lbhrr"]
[ext_resource type="Script" uid="uid://d4jgiwfy3ai7k" path="res://scripts/enemy_manager.gd" id="3_lnu2h"]
[ext_resource type="Texture2D" uid="uid://y0vrkel4nud7" path="res://icon.svg" id="4_lbhrr"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_lnu2h"]
vertices = PackedVector2Array(88.296875, 452.21875, 192, 316.54688, 192, 513.7422, 184.89844, 51.078125, 92.6875, -61.132813, 476.5703, -30.203125, 856.21875, 139.71875, 2051.9063, -501.96875, 2033.0781, 1614.9766, 847.78125, 531.27344, -1744.0625, 1609.0078, -145.71875, 548.28125, -332.39844, 521.6172, -528.3672, 404.64844, -1756.9297, -493.02344, -573.59375, 263.71875, -494.6328, 55.539063, 220.14063, 156.79688, -70.10156, -337.2578, -87.27344, -149.45313, -342.97656, -102.25, 488.39844, -321.71094)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5), PackedInt32Array(6, 7, 8), PackedInt32Array(9, 6, 8), PackedInt32Array(9, 8, 10), PackedInt32Array(2, 9, 10), PackedInt32Array(0, 2, 10), PackedInt32Array(11, 0, 10), PackedInt32Array(12, 11, 10), PackedInt32Array(13, 12, 10), PackedInt32Array(13, 10, 14), PackedInt32Array(15, 13, 14), PackedInt32Array(16, 15, 14), PackedInt32Array(17, 3, 5), PackedInt32Array(6, 17, 5), PackedInt32Array(18, 19, 20), PackedInt32Array(20, 16, 14), PackedInt32Array(6, 5, 21), PackedInt32Array(7, 6, 21), PackedInt32Array(14, 7, 21), PackedInt32Array(14, 21, 18), PackedInt32Array(20, 14, 18)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1767, -503, 2062, -512, 2043, 1625, -1754, 1619)])
sample_partition_type = 1

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")
bullet_scene = "uid://b7sr72vchlgx2"
enemy_types = PackedStringArray("uid://claos1vdcej5g")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(2084, 1113)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_lbhrr")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("3_lnu2h")

[node name="EnemySpawnerCooldown" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
navigation_polygon = SubResource("NavigationPolygon_lnu2h")

[node name="Polygon2D" type="Polygon2D" parent="NavigationRegion2D"]
polygon = PackedVector2Array(-61, -327, 478, -312, 467, -41, 70, -73, 176, 56, 213, 167, 846, 150, 838, 521, 202, 504, 202, 287, 82, 444, -147, 538, -329, 512, -520, 398, -563, 264, -486, 61, -338, -93, -78, -141)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NavigationRegion2D/Polygon2D"]
polygon = PackedVector2Array(475, -310, 464, -24, 73, -73, 173, 56, 210, 173, 843, 144, 841, 524, 190, 509, 202, 278, 79, 449, -141, 541, -323, 521, -523, 392, -563, 255, -492, 56, -338, -90, -78, -147, -75, -335)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 6
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -1774.0
offset_top = -521.0
offset_right = 2066.0
offset_bottom = 1639.0
texture = ExtResource("2_lbhrr")

[connection signal="timeout" from="EnemySpawnerCooldown" to="." method="_on_enemy_spawner_cooldown_timeout"]
